EWA-23 / EWA-17: Fixed unreadable history bar

--- a/public/stylesheets/site/2.0/13-group-blurb.css
+++ b/public/stylesheets/site/2.0/13-group-blurb.css
@@ -410,7 +410,7 @@ blurbs on the manage collection items pages, mostly reseting styles inherited fr
 }
 
 .reading h4.viewed {
-  background: #ddd;
+  background: #161616;
 }
 
 .reading .deleted h4.viewed {
